--- a/Meet.html
+++ b/Meet.html
@@ -55,28 +55,28 @@
             we believe you cannot sit still in this occupation as we learn more about dogs daily. We ensure that our
             knowledge is kept up-to-date by attending regular seminars and courses presented by well-respected canine
             trainers, behaviorists, and practitioners.</p>
-        <div class="card-container">
-            <div class="card">
+        <ul class="card-container">
+            <li class="card">
                 <img src="/images/team/lori-hanson.jpg" alt="Lori Hanson">
                 <h3>Lori Hanson</h3>
                 <p>Founder of Doggie Walks</p>
-            </div>
-            <div class="card">
+            </li>
+            <li class="card">
                 <img src="/images/team/gary-simpson.jpg" alt="Gary Simpson">
                 <h3>Gary Simpson</h3>
                 <p>Team Manager</p>
-            </div>
-            <div class="card">
+            </li>
+            <li class="card">
                 <img src="/images/team/rebecca-harrison.jpg" alt="Rebecca Harrison">
                 <h3>Rebecca Harrison</h3>
                 <p>Professional Dog Walker</p>
-            </div>
-            <div class="card">
+            </li>
+            <li class="card">
                 <img src="/images/team/joanna-davies.jpg" alt="Joanna Davies">
                 <h3>Joanna Davies</h3>
                 <p>Professional Dog Walker</p>
-            </div>
-        </div>
+            </li>
+        </ul>
     </section>
     <footer>
         <p>Opening Times:<br>Monday – Friday (8am – 7pm)<br>Saturday (8am – 5pm)<br>Sunday (12pm - 5pm)</p>
