making css changes

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -33,6 +33,7 @@
     </section>
     <header>
         <h1>Welcome to Doggie Walks!</h1>
+        <h3>"Helping our animal friends one paw at a time"</h3>
         <p>We are committed to providing professional and personal care to your beloved four-legged friends.</p>
     </header>
     <nav>
