--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
     </section>
     <header>
         <h1>Welcome to Doggie Walks!</h1>
+        <h3>"Helping our animal friends one paw at a time"</h3>
         <p>We are committed to providing professional and personal care to your beloved four-legged friends.</p>
     </header>
     <nav>
@@ -74,6 +75,7 @@
 
         
     </section>
+    <h1>Locations</h1>
     <div class="locations">
         <div class="location">
             <h3>Ormskirk</h3>
