changing gallery for it to work

--- a/Home.html
+++ b/Home.html
@@ -51,7 +51,7 @@
         </ul>
     </nav>
     <section>
-        <h2>About Us</h2>
+        <h2>Our Home</h2>
         <p>We are based in Ormskirk and offer exciting and stimulating walks all over the beautiful Lancashire and
             Merseyside countryside. We guarantee your dog will come home tired and content.</p>
         <p>We recognize every dog's needs are different and how busy daily life can be. With services starting from only
@@ -60,7 +60,7 @@
             email at <a href="mailto:info@doggiewalks.co.uk">info@doggiewalks.co.uk</a>.</p>
         <div class="about-us-images">
             <img src="/images/pexels-photo-283012.jpeg" alt="">
-            <img src="/images/photo-1494947665470-20322015e3a8.jpg" alt="">
+            <img src="/images/pexels-photo-976924.jpeg" alt="">
         </div>
     </section>
     <section>
