--- a/AboutUs.html
+++ b/AboutUs.html
@@ -50,13 +50,14 @@
             <li><a href="/contact.html">Contact Us</a></li>
         </ul>
     </nav>
-    <section>
-        <h1>About Doggie Walks</h1>
-        <p>Doggie walks are committed to ensuring that your pet is safe, healthy and active. Our canine friends should feel different terrain under their paws, hear different sounds and see different sights and have a decent sniff about!</p>
-        <p>While dogs need daily exercise in order to stay healthy, for many people it's not always possible to walk their pets regularly. That's why we established Doggie Walks, to help people across Lancashire and Merseyside ensure their dogs live happy lives.</p>
-        <p>Your dog will be collected from your home and taken to a local park for a walk with their pals. Exercise, mental stimulation, socialisation and play make for a happier, calmer and more contented dog. With a maximum of 4 dogs per walk you can be sure that your best friend is getting all the attention they deserve.</p>
-        <p>However, we also accept drop-offs at your nearest local branch. You can find out more about where your nearest branch is via our <a href="/contact.html">contact page</a>.</p>
-    </section>
+    <section class="about-section">
+    <h1>About Doggie Walks</h1>
+    <p>Doggie walks are committed to ensuring that your pet is safe, healthy and active. Our canine friends should feel different terrain under their paws, hear different sounds and see different sights and have a decent sniff about!</p>
+    <p>While dogs need daily exercise in order to stay healthy, for many people it's not always possible to walk their pets regularly. That's why we established Doggie Walks, to help people across Lancashire and Merseyside ensure their dogs live happy lives.</p>
+    <p>Your dog will be collected from your home and taken to a local park for a walk with their pals. Exercise, mental stimulation, socialisation and play make for a happier, calmer and more contented dog. With a maximum of 4 dogs per walk you can be sure that your best friend is getting all the attention they deserve.</p>
+    <p>However, we also accept drop-offs at your nearest local branch. You can find out more about where your nearest branch is via our <a href="/contact.html">contact page</a>.</p>
+
+</section>
     <footer>
         <p>Opening Times:<br>Monday – Friday (8am – 7pm)<br>Saturday (8am – 5pm)<br>Sunday (12pm - 5pm)</p>
         <p>Contact Details:<br>Phone: 01695 883 112<br>Email: info@doggiewalks.co.uk</p>
