making it mobile friednly

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Doggie Walks!</title>
-    <!-- CSS only -->
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <section>
-        <div class="image-container">
+        <div class="top_banner">
             <img src="/images/logo.svg" alt="Logo">
             <strong>Ormskirk</strong>
             Doggie Walks<br>
@@ -50,7 +49,7 @@
             <li><a href="/contact.html">Contact Us</a></li>
         </ul>
     </nav>
-    <section class="about-section">
+    <section>
     <h1>About Doggie Walks</h1>
     <p>Doggie walks are committed to ensuring that your pet is safe, healthy and active. Our canine friends should feel different terrain under their paws, hear different sounds and see different sights and have a decent sniff about!</p>
     <p>While dogs need daily exercise in order to stay healthy, for many people it's not always possible to walk their pets regularly. That's why we established Doggie Walks, to help people across Lancashire and Merseyside ensure their dogs live happy lives.</p>
