--- a/Home.html
+++ b/Home.html
@@ -5,31 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Doggie Walks!</title>
-    <!-- CSS only -->
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <section>
-        <div class="image-container">
-            <img src="/images/logo.svg" alt="Logo">
-            <strong>Ormskirk</strong>
+    <section class="top_banner">
+        <img src="/images/logo.svg" alt="Logo">
+        <p><strong>Ormskirk</strong><br>
             Doggie Walks<br>
             3-5 St Helens Road,<br>
             Ormskirk<br>
-            L35 4PO
-            <strong>Southport</strong><br>
+            L35 4PO</p>
+        <p><strong>Southport</strong><br>
             Doggie Walks<br>
             150 Lord Street,<br>
             Southport,<br>
-            PR9 0NP
-            <strong>Warrington</strong><br>
+            PR9 0NP</p>
+        <p><strong>Warrington</strong><br>
             Doggie Walks<br>
             47 Old Liverpool Road,<br>
             Warrington,<br>
-            WA5 1AF
-            <img src="/images/dog-animal-pet-german-longhaired-pointer.jpg" alt="Banner Image">
-        </div>
+            WA5 1AF</p>
+        <img class="banner_dog" src="/images/dog-animal-pet-german-longhaired-pointer.jpg" alt="Banner Image">
     </section>
     <header>
         <h1>Welcome to Doggie Walks!</h1>
@@ -51,7 +48,7 @@
         </ul>
     </nav>
     <section>
-        <p class="promotional-message">Exciting News! Discover our new <strong>"50% off home visits for new customers"</strong> promotion for your furry friend!
+        <p class="promo">Exciting News! Discover our new <strong>"50% off home visits for new customers"</strong> promotion for your furry friend!
              Join us and make your pet have day to remember!</p>
         <h2>Our Home</h2>
         <p>We are based in Ormskirk and offer exciting and stimulating walks all over the beautiful Lancashire and
@@ -60,7 +57,7 @@
             £10, we ensure you the best possible service to suit the needs of both you and your pooch.</p>
         <p>We are also fully insured for everybody's peace of mind. For more information on this, please contact us or
             email at <a href="mailto:info@doggiewalks.co.uk">info@doggiewalks.co.uk</a>.</p>
-        <div class="about-us-images">
+        <div class="home_images">
             <img src="/images/pexels-photo-283012.jpeg" alt="">
             <img src="/images/pexels-photo-976924.jpeg" alt="">
         </div>
