--- a/Meet.html
+++ b/Meet.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Doggie Walks!</title>
-    <!-- CSS only -->
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <section>
-        <div class="image-container">
+        <div class="top_banner">
             <img src="/images/logo.svg" alt="Logo">
             <strong>Ormskirk</strong>
             Doggie Walks<br>
@@ -50,13 +49,13 @@
             <li><a href="/contact.html">Contact Us</a></li>
         </ul>
     </nav>
-    <section class="team-section">
+    <section class="team_text">
         <p>Meet the Doggie Walks team! We’re fully trained and insured to work with animals and are committed to the health
             and benefits of your pet. We aim to keep providing the best knowledge regarding dogs as we can, and to do this
             we believe you cannot sit still in this occupation as we learn more about dogs daily. We ensure that our
             knowledge is kept up-to-date by attending regular seminars and courses presented by well-respected canine
             trainers, behaviorists, and practitioners.</p>
-        <ul class="card-container">
+        <ul class="card_grid">
             <li class="card">
                 <img src="/images/team/lori-hanson.jpg" alt="Lori Hanson">
                 <h3>Lori Hanson</h3>
