adding background and css

--- a/Home.html
+++ b/Home.html
@@ -47,9 +47,11 @@
             <li><a href="/contact.html">Contact Us</a></li>
         </ul>
     </nav>
+    <p class="promo">Exciting News! Discover our new <strong>"50% off home visits for new customers"</strong> promotion for
+        your furry friend!
+        Join us and make your pet have day to remember!</p>
     <section>
-        <p class="promo">Exciting News! Discover our new <strong>"50% off home visits for new customers"</strong> promotion for your furry friend!
-             Join us and make your pet have day to remember!</p>
+        
         <h2>Our Home</h2>
         <p>We are based in Ormskirk and offer exciting and stimulating walks all over the beautiful Lancashire and
             Merseyside countryside. We guarantee your dog will come home tired and content.</p>
