--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,7 @@
 
         
     </section>
+    <section>
     <h1>Locations</h1>
     <ul class="locations">
         <li>
@@ -104,6 +105,7 @@
             </address>
         </li>
     </ul>
+    </section>
     <footer>
         <p>Opening Times:<br>Monday – Friday (8am – 7pm)<br>Saturday (8am – 5pm)<br>Sunday (12pm - 5pm)</p>
         <p>Contact Details:<br>Phone: 01695 883 112<br>Email: info@doggiewalks.co.uk</p>
