--- a/Home.html
+++ b/Home.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- Document type declaration -->
 <html lang="en">
+<!-- Language of the document -->
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Doggie Walks!</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- Head of the document -->
+    <meta charset="UTF-8"><!-- Character encoding -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- Responsive design meta tag -->
+    <title>Welcome to Doggie Walks!</title><!-- Title of the document -->
+    <link rel="stylesheet" href="styles.css"><!-- Link to external stylesheet -->
 </head>
 
 <body>
+    <!-- Location & Logo -->
     <section class="top_banner">
         <img src="/images/logo.svg" alt="Logo">
         <p><strong>Ormskirk</strong><br>
@@ -28,11 +31,13 @@
             WA5 1AF</p>
         <img class="banner_dog" src="/images/dog-animal-pet-german-longhaired-pointer.jpg" alt="Banner Image">
     </section>
+    <!--Header Banner-->
     <header>
         <h1>Welcome to Doggie Walks!</h1>
         <h3>"Helping our animal friends one paw at a time"</h3>
         <p>We are committed to providing professional and personal care to your beloved four-legged friends.</p>
     </header>
+    <!-- Navigation menu-->
     <nav>
         <ul>
             <li><a href="/Home.html">Home</a></li>
@@ -47,11 +52,13 @@
             <li><a href="/contact.html">Contact Us</a></li>
         </ul>
     </nav>
-    <p class="promo">Exciting News! Discover our new <strong>"50% off home visits for new customers"</strong> promotion for
+    <!--Promotion advert-->
+    <p class="promo">Exciting News! Discover our new <strong>"50% off home visits for new customers"</strong> promotion
+        for
         your furry friend!
         Join us and make your pet have day to remember!</p>
     <section>
-        
+
         <h2>Our Home</h2>
         <p>We are based in Ormskirk and offer exciting and stimulating walks all over the beautiful Lancashire and
             Merseyside countryside. We guarantee your dog will come home tired and content.</p>
@@ -64,6 +71,7 @@
             <img src="/images/pexels-photo-976924.jpeg" alt="">
         </div>
     </section>
+    <!-- Section about services-->
     <section>
         <h2>Our Services</h2>
         <ul>
@@ -74,6 +82,7 @@
         <p>There's something to suit everyone but if you can't find what you're looking for, please <a
                 href="/contact.html">contact us</a>.</p>
     </section>
+    <!-- Footer of the page-->
     <footer>
         <p>Opening Times:<br>Monday – Friday (8am – 7pm)<br>Saturday (8am – 5pm)<br>Sunday (12pm - 5pm)</p>
         <p>Contact Details:<br>Phone: 01695 883 112<br>Email: info@doggiewalks.co.uk</p>
