--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- Document type declaration -->
 <html lang="en">
+<!-- Language of the document -->
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Doggie Walks!</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- Head of the document -->
+    <meta charset="UTF-8"><!-- Character encoding -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- Responsive design meta tag -->
+    <title>Meet the Teams</title><!-- Title of the document -->
+    <link rel="stylesheet" href="styles.css"><!-- Link to external stylesheet -->
 </head>
 
 <body>
+    <!-- Location & Logo -->
     <section>
         <div class="top_banner">
             <img src="/images/logo.svg" alt="Logo">
@@ -30,11 +33,13 @@
             <img src="/images/dog-animal-pet-german-longhaired-pointer.jpg" alt="Banner Image">
         </div>
     </section>
+    <!--Header Banner-->
     <header>
         <h1>Welcome to Doggie Walks!</h1>
         <h3>"Helping our animal friends one paw at a time"</h3>
         <p>We are committed to providing professional and personal care to your beloved four-legged friends.</p>
     </header>
+    <!-- Navigation menu-->
     <nav>
         <ul>
             <li><a href="/Home.html">Home</a></li>
@@ -50,13 +55,21 @@
         </ul>
     </nav>
     <section>
-    <h1>About Doggie Walks</h1>
-    <p>Doggie walks are committed to ensuring that your pet is safe, healthy and active. Our canine friends should feel different terrain under their paws, hear different sounds and see different sights and have a decent sniff about!</p>
-    <p>While dogs need daily exercise in order to stay healthy, for many people it's not always possible to walk their pets regularly. That's why we established Doggie Walks, to help people across Lancashire and Merseyside ensure their dogs live happy lives.</p>
-    <p>Your dog will be collected from your home and taken to a local park for a walk with their pals. Exercise, mental stimulation, socialisation and play make for a happier, calmer and more contented dog. With a maximum of 4 dogs per walk you can be sure that your best friend is getting all the attention they deserve.</p>
-    <p>However, we also accept drop-offs at your nearest local branch. You can find out more about where your nearest branch is via our <a href="/contact.html">contact page</a>.</p>
+        <h1>About Doggie Walks</h1>
+        <p>Doggie walks are committed to ensuring that your pet is safe, healthy and active. Our canine friends should
+            feel different terrain under their paws, hear different sounds and see different sights and have a decent
+            sniff about!</p>
+        <p>While dogs need daily exercise in order to stay healthy, for many people it's not always possible to walk
+            their pets regularly. That's why we established Doggie Walks, to help people across Lancashire and
+            Merseyside ensure their dogs live happy lives.</p>
+        <p>Your dog will be collected from your home and taken to a local park for a walk with their pals. Exercise,
+            mental stimulation, socialisation and play make for a happier, calmer and more contented dog. With a maximum
+            of 4 dogs per walk you can be sure that your best friend is getting all the attention they deserve.</p>
+        <p>However, we also accept drop-offs at your nearest local branch. You can find out more about where your
+            nearest branch is via our <a href="/contact.html">contact page</a>.</p>
 
-</section>
+    </section>
+    <!-- Footer of the page-->
     <footer>
         <p>Opening Times:<br>Monday – Friday (8am – 7pm)<br>Saturday (8am – 5pm)<br>Sunday (12pm - 5pm)</p>
         <p>Contact Details:<br>Phone: 01695 883 112<br>Email: info@doggiewalks.co.uk</p>
